--- a/leo.html
+++ b/leo.html
@@ -1,20 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title> Leo Club of Kathmandu Pashupatinath</title>
-    <style>
-        img {width:30%;
-             height:30%;
-            }
-    </style>
+  <meta charset="UTF-8">
+  <title>Leo Club of Kathmandu Pashupatinath</title>
+  <style>
+    :root {
+      --bg: #0b0b0f;
+      --card: #14141a;
+      --text: #e8e8ee;
+      --muted: #b6b6c2;
+      --accent: #6ee7ff;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: system-ui, Segoe UI, Roboto, Arial, sans-serif;
+      text-align: center;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    header {
+      width: 100%;
+      background: rgba(11, 11, 15, 0.8);
+      backdrop-filter: blur(8px);
+      padding: 16px 0;
+      border-bottom: 1px solid #202028;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 26px;
+      letter-spacing: 1px;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 18px;
+      padding: 32px;
+      width: 100%;
+      max-width: 1100px;
+    }
+
+    .card {
+      background: var(--card);
+      border: 1px solid #232332;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 14px rgba(0,0,0,0.5);
+    }
+
+    .card img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      display: block;
+    }
+
+    .back-btn {
+      display: inline-block;
+      margin: 20px 0 40px;
+      padding: 10px 18px;
+      border-radius: 12px;
+      background: var(--accent);
+      color: #001018;
+      font-weight: 700;
+      text-decoration: none;
+      transition: all 0.3s;
+    }
+
+    .back-btn:hover {
+      background: #4cd3f9;
+      transform: translateY(-2px);
+    }
+
+    footer {
+      color: var(--muted);
+      font-size: 14px;
+      margin-bottom: 16px;
+    }
+  </style>
 </head>
 <body>
-    <img src="images/leo4.jpg" alt="leo">
-    <img src="images/leo2.jpg" alt="leo">
-    <br>
-    <img src="images/leo3.jpg" alt="leo">
-    <img src="images/leo1.jpg" alt="leo">
-    <h2><strong><a href="index.html">BACK</a></strong></h2>
+  <header>
+    <h1>Leo Club of Kathmandu Pashupatinath</h1>
+  </header>
+
+  <main>
+    <section class="gallery">
+      <div class="card"><img src="images/leo1.jpg" alt="Leo Event 1"></div>
+      <div class="card"><img src="images/leo2.jpg" alt="Leo Event 2"></div>
+      <div class="card"><img src="images/leo3.jpg" alt="Leo Event 3"></div>
+      <div class="card"><img src="images/leo4.jpg" alt="Leo Event 4"></div>
+    </section>
+
+    <a class="back-btn" href="index.html">← Back to Portfolio</a>
+  </main>
+
+
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
